force-app/main/default/objects/Coin_Purse__c/Coin_Purse__c.object-meta.xml
<CustomObject>
    <label>Coin Purse</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Coin Purse Owner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coin Purses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>