force-app/main/default/objects/Coin_Purse__c/fields/Coin_location__c.field-meta.xml
<CustomField>
    <fullName>Coin_location__c</fullName>
    <description>Hidden location of coins !</description>
    <label>Coin_location</label>
    <type>TextArea</type>
</CustomField>