force-app/main/default/objects/Coin_Purse__c/fields/Coin_Purse_Owner__c.field-meta.xml
<CustomField>
    <fullName>Coin_Purse_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coin Purse Owner</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Coin Purse</relationshipLabel>
    <relationshipName>Coin_Purse</relationshipName>
    <type>Lookup</type>
</CustomField>