force-app/main/default/objects/Coin_Purse__c/fields/Copper_Coins__c.field-meta.xml
<CustomField>
    <fullName>Copper_Coins__c</fullName>
    <label>Copper Coins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>