force-app/main/default/objects/Coin_Purse__c/fields/Gold_Coins__c.field-meta.xml
<CustomField>
    <fullName>Gold_Coins__c</fullName>
    <description>Number of Gold coins owned by you</description>
    <label>Gold Coins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>