force-app/main/default/objects/Coin_Purse__c/fields/Silver_Coins__c.field-meta.xml
<CustomField>
    <fullName>Silver_Coins__c</fullName>
    <label>Silver Coins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>