force-app/main/default/objects/Coin_Purse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Coin_Purse_Owner__c</columns>
    <columns>Gold_Coins__c</columns>
    <columns>Silver_Coins__c</columns>
    <columns>Copper_Coins__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Coin_location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>